<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:textColor="@color/black"

    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:paddingEnd="10dp"
        android:text="@string/login_text1"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:text="@string/login_text2"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20dp"
        android:layout_marginStart="35dp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        />

    <EditText
        android:layout_width="320dp"
        android:layout_height="58dp"
        android:background="@drawable/edit_text_background"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email_hint"
        android:paddingStart="26dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"



        />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        />



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:endIconMode="password_toggle"
        android:scrollbars="vertical"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password_hint"
            android:paddingStart="26dp"
            android:id="@+id/password_id"
            android:textColor="@color/black"



            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="320dp"
        android:layout_height="58dp"
        android:text="@string/btn_login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:id="@+id/loginbtn"
        android:background="@drawable/edit_button_background"
        android:textColor="@color/white"

        />

</LinearLayout>