<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    >

<!--        <include layout="@layout/activity_profilebox"/>-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/morning"
        android:textColor="@color/gray"
        android:textSize="15dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:paddingStart="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:paddingStart="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks_name"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:layout_marginTop="80dp"
        />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/user_profile_2"
        android:layout_marginTop="15dp"
        android:layout_marginStart="330dp"

        />





    <Spinner
        android:id="@+id/prioritySpinner"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:prompt="@string/priority_label"
        android:layout_marginTop="100dp"
        android:layout_marginStart="140dp"

        android:background="@drawable/custom_spinner_background2"/>






    <Button
        android:id="@+id/datePickerButton"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/date_lowercase"
        android:layout_marginTop="100dp"
        android:layout_marginStart="260dp"
        android:gravity="center_vertical"
        android:background="@drawable/edit_text_background2"
        android:paddingStart="8dp"/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/baseline_calendar_month_24"
        android:layout_marginTop="105dp"
        android:layout_marginStart="320dp"
        android:elevation="8dp"


        />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo"
        android:textColor="@color/light_purple"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginTop="150dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="75dp"
        android:layout_marginTop="150dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
       >

        <ListView
            android:id="@+id/listviewbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="200dp"
            android:paddingTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:divider="#00000000"
            android:dividerHeight="10dp"/>
    </LinearLayout>


    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/addBtn"
        android:gravity="center_horizontal"
        android:text="@string/plus_mark"
        android:textSize="40dp"
        android:textColor="@color/white"
        android:background="@drawable/edit_button_background"
        android:layout_marginTop="700dp"
        android:layout_centerHorizontal="true"

        />


</RelativeLayout>
