<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profilebox">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/morning"
        android:textColor="@color/gray"
        android:textSize="15dp"
        android:textStyle="bold"
        android:padding="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks_name"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginTop="80dp"
        />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/user_profile_2"
        android:layout_marginTop="15dp"
        android:layout_marginStart="330dp"

        />

    <Spinner
        android:id="@+id/dropdownMenuProfile"
        android:background="@drawable/edit_text_background2"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="140dp"


        />



    <Button
        android:id="@+id/datePickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Date"
            android:layout_marginTop="100dp"
            android:layout_marginStart="260dp"
        />








</RelativeLayout>